# glrt

./: .gitignore  CMakeLists.txt
asset/: cornell.mtl  default.frag  default.vert  teapot.mtl
asset/shader/: default.comp  default.frag  default.glsl  default.vert
include/: bvh.hxx  math.hxx  obj.hxx
include/glrt/: box.hxx  bvh.hxx  gl.hxx  math.hxx  model.hxx  obj.hxx  triangle.hxx  types.hxx  window.hxx
src/: bvh.cxx  main.cxx  obj.cxx  triangle.cxx  window.cxx
src/gl/: buffer.cxx  error.cxx  program.cxx  shader.cxx  texture.cxx  vertex_array.cxx
